--- a/site/site.conf
+++ b/site/site.conf
@@ -66,7 +66,7 @@
     mtu = 1364,
     enabled = true,
     tunneldigger = {
-      brokers = {'185.97.5.69:10076'},
+      brokers = {'217.79.179.60:10076', '185.97.5.69:10076'},
     },
     bandwidth_limit = {
       enabled = false,
