--- a/site/site.conf
+++ b/site/site.conf
@@ -129,6 +129,17 @@
       },
     },
   },
+
+  ssid_changer = {
+    enabled = true,
+    switch_timeframe = 3,
+    first = 5,
+    prefix = 'FF_Offline_',
+    suffix = 'nodename',
+    tq_limit_enabled = true,
+    tq_limit_max = 45,
+    tq_limit_min = 35
+  },
 }
 
 -- vim: filetype=lua
